--- a/src/components/Screens/CategoryPage/BarkInfo/BarkInfo.module.scss
+++ b/src/components/Screens/CategoryPage/BarkInfo/BarkInfo.module.scss
@@ -1,23 +1,23 @@
 @import '@/styles/variables';
 
-// .section {
-//   opacity: 0;
+.section {
+  opacity: 0;
 
-//   &_animate {
-//     transition: opacity 0.8s;
-//     opacity: 1;
+  &_animate {
+    transition: opacity 0.8s;
+    opacity: 1;
 
-//     .title {
-//       transition: transform 0.8s;
-//       transform: translateX(0);
-//     }
-//   }
-// }
+    .title {
+      transition: transform 0.8s;
+      transform: translateX(0);
+    }
+  }
+}
 
-// .title {
-//   white-space: nowrap;
-//   transform: translateX(-10%);
-// }
+.title {
+  // white-space: nowrap;
+  transform: translateX(-10%);
+}
 
 .subTitle {
   margin-bottom: 20px;
