--- a/src/components/Screens/CategoryPage/BarkInfo/BarkInfo.module.scss
+++ b/src/components/Screens/CategoryPage/BarkInfo/BarkInfo.module.scss
@@ -1,4 +1,5 @@
 @import '@/styles/variables';
+@import '@/styles/mixins';
 
 .section {
   opacity: 0;
@@ -42,6 +43,15 @@
 .num {
   font-size: 1.2rem;
   font-weight: 700;
+}
+
+@media (max-width: $tablet) {
+  .title {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    @include BorderBottomGradientCenter;
+  }
 }
 
 @media (max-width: $mobileM) {
