--- a/src/components/Screens/CategoryPage/PeatInfo/PeatInfo.module.scss
+++ b/src/components/Screens/CategoryPage/PeatInfo/PeatInfo.module.scss
@@ -1,3 +1,6 @@
+@import '@/styles/mixins';
+@import '@/styles/variables';
+
 .section {
   opacity: 0;
 
@@ -41,5 +44,14 @@
 
   &:last-child {
     margin-bottom: 0;
+  }
+}
+
+@media (max-width: $tablet) {
+  .title {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    @include BorderBottomGradientCenter;
   }
 }
