--- a/src/components/Screens/CategoryPage/PlantsInfo/PlantsInfo.module.scss
+++ b/src/components/Screens/CategoryPage/PlantsInfo/PlantsInfo.module.scss
@@ -1,3 +1,6 @@
+@import '@/styles/variables';
+@import '@/styles/mixins';
+
 .section {
   opacity: 0;
 
@@ -14,4 +17,13 @@
 
 .title {
   transform: translateX(-10%);
+}
+
+@media (max-width: $tablet) {
+  .title {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    @include BorderBottomGradientCenter;
+  }
 }
