--- a/src/components/UI/Background/Background.module.scss
+++ b/src/components/UI/Background/Background.module.scss
@@ -2,7 +2,7 @@
   position: relative;
 
   width: 100%;
-  max-height: min-content;
+  height: 100%;
   -webkit-clip-path: inset(0 0 0 0);
   clip-path: inset(0 0 0 0);
 }
