--- a/src/components/UI/Background/Background.module.scss
+++ b/src/components/UI/Background/Background.module.scss
@@ -2,9 +2,10 @@
   position: relative;
 
   width: 100%;
-  height: 100%;
+  height: min-content;
   -webkit-clip-path: inset(0 0 0 0);
   clip-path: inset(0 0 0 0);
+  overflow: hidden;
 }
 
 .imageWrapper {
@@ -15,11 +16,13 @@
 
   left: 0;
   top: 0;
+  overflow: hidden;
 }
 
 .image {
   object-fit: cover;
   object-position: center;
+  overflow: hidden;
 }
 
 .children {
