--- a/src/components/UI/Background/Background.module.scss
+++ b/src/components/UI/Background/Background.module.scss
@@ -5,7 +5,6 @@
   height: min-content;
   -webkit-clip-path: inset(0 0 0 0);
   clip-path: inset(0 0 0 0);
-  overflow: hidden;
 }
 
 .imageWrapper {
@@ -16,16 +15,29 @@
 
   left: 0;
   top: 0;
-  overflow: hidden;
 }
 
 .image {
   object-fit: cover;
   object-position: center;
-  overflow: hidden;
 }
 
 .children {
   display: flex;
   flex-direction: column;
+}
+
+/////////////////////
+.bg {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+
+
+
+  background-position: center;
+  background-repeat: no-repeat;
+  // background-attachment: fixed;
+  background-size: cover;
 }
