--- a/src/components/Screens/CategoryPage/BarkInfo/BarkInfo.module.scss
+++ b/src/components/Screens/CategoryPage/BarkInfo/BarkInfo.module.scss
@@ -9,13 +9,15 @@
     // opacity: 1; 
 
     .title {
-      transition: transform 0.8s;
+      opacity: 1;
       transform: translateX(0);
+      transition: opacity 0.8s, transform 0.8s;
     }
   }
 }
 
 .title {
+  opacity: 0;
   transform: translateX(-10%);
 }
 
