--- a/src/components/Screens/CategoryPage/BarkInfo/BarkInfo.module.scss
+++ b/src/components/Screens/CategoryPage/BarkInfo/BarkInfo.module.scss
@@ -14,7 +14,7 @@
       transition: opacity 0.8s, transform 0.8s;
     }
 
-    .subTitle {
+    .info {
       opacity: 1;
       transition: opacity 0.8s;
     }
@@ -26,12 +26,12 @@
   transform: translateX(-10%);
 }
 
-// .info {
-//   opacity: 0;
-// }
+.info {
+  opacity: 0;
+}
 
 .subTitle {
-  opacity: 0; ////////////
+  // opacity: 0; ////////////
   margin-bottom: 15px;
 
   font-size: 1.2rem;
