fix: test clip-path bug

--- a/src/components/UI/Background/Background.module.scss
+++ b/src/components/UI/Background/Background.module.scss
@@ -2,7 +2,7 @@
   position: relative;
 
   width: 100%;
-  height: min-content;
+  // height: min-content;
   -webkit-clip-path: inset(0 0 0 0);
   clip-path: inset(0 0 0 0);
 }
