--- a/src/components/UI/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/UI/BurgerMenu/BurgerMenu.module.scss
@@ -85,6 +85,7 @@
 
   width: 85%;
   height: 100%;
+  height: 100lvh;
 
   padding: 30px;
   padding-top: 70px;
@@ -108,7 +109,7 @@
 
     background-color: $black;
     border-radius: $borderRadius;
-    transition: 0.3s;
+    transition: right 0.3s;
   }
 
   &_active {
