--- a/src/components/UI/Background/Background.module.scss
+++ b/src/components/UI/Background/Background.module.scss
@@ -1,10 +1,12 @@
+@import '@/styles/variables';
+
 .container {
   position: relative;
 
-  width: 100%;
-  height: min-content;
-  -webkit-clip-path: inset(0 0 0 0);
-  clip-path: inset(0 0 0 0);
+  // width: 100%;
+  // height: min-content;
+  // -webkit-clip-path: inset(0 0 0 0);
+  // clip-path: inset(0 0 0 0);
 }
 
 .imageWrapper {
@@ -25,4 +27,19 @@
 .children {
   display: flex;
   flex-direction: column;
+}
+
+.bg {
+  position: absolute;
+  z-index: -1;
+
+  width: 100%;
+  height: 100%;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: $white;
+  background-image: none;
+  transition: 0.3s;
 }
