--- a/src/components/UI/Background/Background.module.scss
+++ b/src/components/UI/Background/Background.module.scss
@@ -31,7 +31,25 @@
   width: 100%;
   height: 100%;
 
-  background-position: 0 0;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: $white;
+}
+
+@media all and (max-width:1024px) {
+  .bg:after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      background-position: inherit;
+      background-image: inherit;
+      background-size: inherit;
+      background-attachment: inherit;
+      background-repeat: inherit;
+      position: fixed;
+      opacity: 0.6;
+      top: 0;
+      z-index: -1;
+  }
 }
