--- a/src/components/UI/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/UI/BurgerMenu/BurgerMenu.module.scss
@@ -153,8 +153,8 @@
   top: 0;
   left: 0;
 
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 
   background-color: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(1px);
