--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -1,5 +1,4 @@
 @import '@/styles/variables';
-@import '@/styles/mixins';
 
 .section {
   &_animate {
@@ -35,7 +34,7 @@
 
 .moreInfo {
   margin: 0 auto;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 
   text-align: center;
 
@@ -45,6 +44,21 @@
 
 .number {
   white-space: nowrap;
+}
+
+.group {
+  max-width: $accordionMaxWidth;
+  margin: 0 auto;
+  margin-bottom: 60px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.subtitle {
+  font-size: 1.4rem;
+  font-weight: 600;
 }
 
 .accordion {
