--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,8 @@ $boxShadowMin: 0px 2px 4px rgba(0, 0, 0, 0.1);
 $boxShadowLight: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
 $boxShadowStrong: 0px 0px 8px 2px rgba(0, 0, 0, 0.3);
 
+$accordionMaxWidth: 790px;
+
 $laptop: 1024px;
 $tablet: 768px;
 $mobileXL: 600px;
