--- a/src/components/UI/Accordion/Accordion.module.scss
+++ b/src/components/UI/Accordion/Accordion.module.scss
@@ -23,7 +23,7 @@
   color: $white;
   text-align: center;
 
-  background-color: $lightBlack;
+  background-color: $green;
   border-top-left-radius: $borderRadius;
   border-top-right-radius: $borderRadius;
 }
