--- a/src/components/Screens/ProductPage/ProductPage.module.scss
+++ b/src/components/Screens/ProductPage/ProductPage.module.scss
@@ -45,6 +45,8 @@
 }
 
 .gallery {
+  flex-grow: 1;
+  
   max-width: 60%;
 }
 
@@ -52,6 +54,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  max-width: 40%;
 
   opacity: 0;
 }
