--- a/src/components/UI/Accordion/AccordionItem/AccordionItem.module.scss
+++ b/src/components/UI/Accordion/AccordionItem/AccordionItem.module.scss
@@ -62,8 +62,8 @@
   }
 }
 
-.list {
-  padding: 0 30px 0 50px;
+.children {
+  padding: 0 30px 30px 30px;
 
   font-size: 1rem;
   font-weight: 500;
@@ -71,34 +71,16 @@
   list-style: disc;
 }
 
-.item {
-  margin-bottom: 10px;
-
-  &:last-child {
-    margin-bottom: 30px;
-  }
-}
-
-.explanation {
-  font-weight: 600;
-  font-style: italic;
-  white-space: nowrap;
-}
-
 @media (max-width: $tablet) {
-  .item {
-    margin-bottom: 15px;
+  .children {
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
 @media (max-width: $mobileL) {
   .container {
     font-size: 1rem;
-  }
-
-  .item {
-    margin-bottom: 15px;
-    font-size: 14px;
   }
 }
 
@@ -108,7 +90,7 @@
     padding-left: 20px;
   }
 
-  .list {
-    padding: 0 10px 0 35px;
+  .children {
+    padding: 0;
   }
 }
