fix: update plants page

--- a/src/pages/404/NotFound.module.scss
+++ b/src/pages/404/NotFound.module.scss
@@ -1,3 +1,5 @@
+@import '@/styles/variables';
+
 .section {
   display: flex;
   flex-direction: column;
@@ -8,7 +10,7 @@
 .statusCode {
   font-size: 6rem;
   letter-spacing: 5px;
-  font-weight: 800;
+  font-weight: 700;
   line-height: 1;
   padding-bottom: 5px;
   margin-bottom: 6px;
@@ -21,4 +23,5 @@
 
 .desc {
   margin-bottom: 30px;
+  text-align: center;
 }
