--- a/src/components/UI/Accordion/AccordionItem/AccordionItem.module.scss
+++ b/src/components/UI/Accordion/AccordionItem/AccordionItem.module.scss
@@ -1,6 +1,7 @@
 @import '@/styles/variables';
 
-.container {
+.container,
+.fakeItemContainer {
   font-size: 1.2rem;
   font-weight: 600;
 
@@ -8,6 +9,22 @@
 
   &:last-child {
     border: none;
+  }
+}
+
+.fakeItemContainer {
+  transition: background 300ms, opacity 300ms;
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.06);
+
+    & .fakeToggler svg {
+      transform: translateX(0%) rotate(90deg);
+    }
+  }
+
+  &:active {
+    opacity: 0.7;
   }
 }
 
@@ -59,6 +76,28 @@
     & svg {
       transform: rotate(-45deg);
     }
+  }
+}
+
+.fakeToggler {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 8px 5px;
+
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+
+  & svg {
+    will-change: transform;
+    transition: transform 300ms;
+    transform: translateX(-50%) rotate(90deg);
+  }
+
+  & svg path {
+    fill: #919191dc;
   }
 }
 
