fix: styles for toggler in fakeAccordionItem

--- a/src/components/UI/Accordion/AccordionItem/AccordionItem.module.scss
+++ b/src/components/UI/Accordion/AccordionItem/AccordionItem.module.scss
@@ -115,6 +115,10 @@
     padding-left: 15px;
     padding-right: 15px;
   }
+
+  .fakeToggler svg {
+    transform: rotate(90deg);
+  }
 }
 
 @media (max-width: $mobileL) {
