--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -13,8 +13,8 @@ html {
   color-scheme: dark;
 
   font-size: 16px;
-  -webkit-text-size-adjust: none;
-  text-size-adjust: none;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 body {
