--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,8 +6,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  -webkit-text-size-adjust: 100%;
-  text-size-adjust: 100%;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
 }
 
 html {
