--- a/src/components/screens/productsPage/BarkInfo/BarkInfo.module.scss
+++ b/src/components/screens/productsPage/BarkInfo/BarkInfo.module.scss
@@ -3,54 +3,48 @@
 .section {
   opacity: 0;
 
+  & div,
+  p {
+    margin-bottom: 30px;
+  }
+
   &_animate {
     transition: opacity 0.8s;
     opacity: 1;
 
     .title {
-      transition: transform 0.8s;
-      transform: translateX(0);
+      transition: opacity 800ms, transform 800ms;
+      transform: translateY(0);
+      opacity: 1;
     }
   }
 }
 
 .title {
-  white-space: nowrap;
-  transform: translateX(-10%);
+  margin-bottom: 35px;
+  transform: translateY(100%);
+  opacity: 0;
 }
 
-.subTitle {
-  margin-bottom: 20px;
-
-  font-size: 1.4rem;
+.mark {
+  font-size: 1.2rem;
 }
 
-.desc {
-  margin-bottom: 20px;
+.listTitle {
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  font-size: 1.2rem;
 }
 
 .list {
-  list-style: none;
-}
+  padding-left: 20px;
+  list-style: disc;
 
-.item {
-  margin-bottom: 5px;
-}
-
-.num {
-  font-size: 1.2rem;
-  font-weight: 700;
-  font-style: italic;
-}
-
-@media (max-width: $laptop) {
-  .title {
-    white-space: normal;
+  & li {
+    padding: 5px 0;
   }
-}
 
-@media (max-width: $mobileM) {
-  .subTitle {
-    font-size: 1.2rem;
+  & li:last-child {
+    padding-bottom: 0;
   }
 }
