--- a/src/components/screens/productsPage/PlantsInfo/PlantsInfo.module.scss
+++ b/src/components/screens/productsPage/PlantsInfo/PlantsInfo.module.scss
@@ -4,14 +4,26 @@
   &_animate {
     transition: opacity 0.8s;
     opacity: 1;
-
-    .title {
-      transition: opacity 0.8s, transform 0.8s;
-      transform: translateY(0);
-    }
   }
 }
 
 .title {
-  transform: translateX(-10%);
+  margin-bottom: 35px;
+}
+
+.desc {
+  margin-bottom: 5px;
+}
+
+.mark {
+  font-size: 1.2rem;
+}
+
+.list {
+  padding-left: 20px;
+  list-style: disc;
+
+  & li {
+    padding: 5px 0;
+  }
 }
