--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -24,3 +24,10 @@
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 15px;
 }
+
+@mixin TableInAccordion() {
+  @media (max-width: $mobileM) {
+    border-radius: 0;
+    border: none;
+  }
+}
