feat: add back button for service page

--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -1,11 +1,12 @@
 @import '@/styles/variables';
 
 .button {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   gap: 5px;
 
+  width: fit-content;
   padding: 10px 15px;
 
   font: inherit;
