--- a/src/components/screens/mainPage/Works/Works.module.scss
+++ b/src/components/screens/mainPage/Works/Works.module.scss
@@ -59,6 +59,10 @@
   transform: translateY(10%);
 }
 
+.button {
+  margin: 0 auto;
+}
+
 @media (max-width: $laptop) {
   .list {
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
