--- a/src/components/screens/productsPage/PlantsSection/PlantsSection.module.scss
+++ b/src/components/screens/productsPage/PlantsSection/PlantsSection.module.scss
@@ -26,8 +26,8 @@
       opacity: 0.7;
     }
 
-    .buttonWrapper {
-      transition: opacity 0.8s 0.8s;
+    .button {
+      transition: opacity 0.8s 0.8s, background 300ms;
       opacity: 1;
     }
   }
@@ -71,8 +71,8 @@
   opacity: 0;
 }
 
-.buttonWrapper {
-  text-align: center;
+.button {
+  margin: 0 auto;
   opacity: 0;
 }
 
