fix: styles for contacts sections

--- a/src/components/screens/general/Contacts/Contacts.module.scss
+++ b/src/components/screens/general/Contacts/Contacts.module.scss
@@ -122,6 +122,10 @@
   border: none;
 }
 
+.ip {
+  margin-bottom: 5px;
+}
+
 @media (max-width: $laptop) {
   .section {
     padding-bottom: 430px;
